[project]
name = "naver-land-mcp"
version = "0.1.0"
description = "Naver Real Estate MCP Server - 네이버 부동산 매물 조회"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
